--- a/src/fullhouse/Masterclass.form
+++ b/src/fullhouse/Masterclass.form
@@ -212,7 +212,6 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -360,6 +359,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="tf_naamClass">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tf_naamClassActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jl_naamDocent">
       <Properties>
