--- a/src/fullhouse/Toernooi.form
+++ b/src/fullhouse/Toernooi.form
@@ -139,6 +139,9 @@
               </Table>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jt_toernooiMousePressed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
