--- a/src/fullhouse/NieuweSpeler.form
+++ b/src/fullhouse/NieuweSpeler.form
@@ -85,7 +85,8 @@
                                       <Component id="jb_spelerZoeken" min="-2" pref="160" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                      <Component id="jl_adresError" min="-2" max="-2" attributes="0"/>
+                                      <EmptySpace max="32767" attributes="0"/>
                                       <Component id="jb_masterclassZoeken" min="-2" pref="160" max="-2" attributes="0"/>
                                   </Group>
                               </Group>
@@ -126,6 +127,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jl_adres" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="tf_adres" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="jl_adresError" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -326,6 +328,14 @@
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Postc + Woonpl :"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="jl_adresError">
+      <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="0" green="0" red="ff" type="rgb"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Ongeldig adres"/>
       </Properties>
     </Component>
   </SubComponents>
