--- a/src/fullhouse/RatingSystem.form
+++ b/src/fullhouse/RatingSystem.form
@@ -6,7 +6,6 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -144,19 +143,12 @@
                               </Group>
                               <EmptySpace max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="l_1oud" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="l_2oud" alignment="1" min="-2" max="-2" attributes="0"/>
-                                          <Component id="l_oud3" alignment="1" min="-2" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace max="-2" attributes="0"/>
-                                  </Group>
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <Component id="l_oud4" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="4" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="l_1oud" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_2oud" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_oud3" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_oud4" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
+                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
