--- a/src/fullhouse/RatingSystem.form
+++ b/src/fullhouse/RatingSystem.form
@@ -1,6 +1,23 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.JOptionPane" name="op_error">
+      <Properties>
+        <Property name="message" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+          <Connection code="&quot;Vul alle velden in.&quot;" type="code"/>
+        </Property>
+        <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+          <Color id="Default Cursor"/>
+        </Property>
+      </Properties>
+      <AccessibilityProperties>
+        <Property name="AccessibleContext.accessibleParent" type="javax.accessibility.Accessible" editor="org.netbeans.modules.form.RADVisualComponent$AccessibleParentEditor">
+          <ComponentRef name="jScrollPane1"/>
+        </Property>
+      </AccessibilityProperties>
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -81,55 +98,50 @@
                                       </Group>
                                   </Group>
                                   <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="1" attributes="0">
-                                          <Component id="b_ok" min="-2" max="-2" attributes="0"/>
-                                          <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" attributes="0">
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="l_2de" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="r_Speler2" min="-2" pref="37" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
+                                              <Component id="l_1ste" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="r_Speler1" min="-2" pref="37" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="0" attributes="0">
                                               <Group type="103" groupAlignment="0" attributes="0">
-                                                  <Group type="102" alignment="0" attributes="0">
-                                                      <Component id="l_2de" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="r_Speler2" min="-2" pref="37" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" alignment="0" attributes="0">
-                                                      <Component id="l_1ste" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="r_Speler1" min="-2" pref="37" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" alignment="0" attributes="0">
-                                                      <Group type="103" groupAlignment="0" attributes="0">
-                                                          <Component id="l_3de" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                          <Component id="l_4de" alignment="0" min="-2" max="-2" attributes="0"/>
-                                                      </Group>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                                          <Component id="r_Speler4" pref="37" max="32767" attributes="0"/>
-                                                          <Component id="r_Speler3" max="32767" attributes="0"/>
-                                                      </Group>
-                                                  </Group>
+                                                  <Component id="l_3de" alignment="0" min="-2" max="-2" attributes="0"/>
+                                                  <Component id="l_4de" alignment="0" min="-2" max="-2" attributes="0"/>
                                               </Group>
                                               <EmptySpace max="-2" attributes="0"/>
-                                              <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                                                  <Group type="102" alignment="1" attributes="0">
-                                                      <Component id="l_1pijltje8" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="l_8ste" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" alignment="1" attributes="0">
-                                                      <Component id="l_2pijltje7" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="l_7de" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" alignment="1" attributes="0">
-                                                      <Component id="l_3pijltje6" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="-2" attributes="0"/>
-                                                      <Component id="l_6de" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
-                                                  <Group type="102" alignment="1" attributes="0">
-                                                      <Component id="l_4pijltje5" min="-2" max="-2" attributes="0"/>
-                                                      <EmptySpace max="32767" attributes="0"/>
-                                                      <Component id="l_5de" min="-2" max="-2" attributes="0"/>
-                                                  </Group>
+                                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                                  <Component id="r_Speler4" pref="37" max="32767" attributes="0"/>
+                                                  <Component id="r_Speler3" max="32767" attributes="0"/>
                                               </Group>
+                                          </Group>
+                                      </Group>
+                                      <EmptySpace max="-2" attributes="0"/>
+                                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="l_1pijltje8" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="l_8ste" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="l_2pijltje7" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="l_7de" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="l_3pijltje6" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="-2" attributes="0"/>
+                                              <Component id="l_6de" min="-2" max="-2" attributes="0"/>
+                                          </Group>
+                                          <Group type="102" alignment="1" attributes="0">
+                                              <Component id="l_4pijltje5" min="-2" max="-2" attributes="0"/>
+                                              <EmptySpace max="32767" attributes="0"/>
+                                              <Component id="l_5de" min="-2" max="-2" attributes="0"/>
                                           </Group>
                                       </Group>
                                       <EmptySpace max="-2" attributes="0"/>
@@ -147,8 +159,11 @@
                                   <Component id="l_2oud" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_oud3" alignment="1" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_oud4" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_ronde" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_toernooi" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_tafel" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -189,10 +204,16 @@
                                   </Group>
                               </Group>
                           </Group>
+                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                              <Component id="t_tafelcode" alignment="0" pref="30" max="32767" attributes="0"/>
+                              <Component id="t_rondenr" alignment="0" max="32767" attributes="0"/>
+                              <Component id="t_toernooicode" alignment="0" max="32767" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Component id="l_nieuweRating" min="-2" max="-2" attributes="0"/>
                   <Component id="jButton1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="b_ok" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -288,9 +309,9 @@
                                       </Group>
                                   </Group>
                               </Group>
-                              <EmptySpace max="-2" attributes="0"/>
-                              <Component id="b_ok" min="-2" max="-2" attributes="0"/>
                               <EmptySpace pref="12" max="32767" attributes="0"/>
+                              <Component id="b_ok" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                               <Component id="l_nieuweRating" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -305,6 +326,8 @@
                                   <Component id="j_nrating2" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="j_nrating6" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_nieuw6" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="t_rondenr" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_ronde" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -312,6 +335,8 @@
                                   <Component id="j_nrating7" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_nieuw3" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_nieuw7" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="t_toernooicode" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_toernooi" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
@@ -319,6 +344,8 @@
                                   <Component id="j_nrating8" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_nieuw4" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="l_nieuw8" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="t_tafelcode" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="l_tafel" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                               <Component id="jButton1" min="-2" max="-2" attributes="0"/>
@@ -371,7 +398,7 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="b_ok">
       <Properties>
-        <Property name="text" type="java.lang.String" value="OK!"/>
+        <Property name="text" type="java.lang.String" value="bereken"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="b_okActionPerformed"/>
@@ -693,6 +720,27 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JTextField" name="t_rondenr">
+    </Component>
+    <Component class="javax.swing.JTextField" name="t_toernooicode">
+    </Component>
+    <Component class="javax.swing.JLabel" name="l_ronde">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Ronde:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JLabel" name="l_toernooi">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Toernooi:"/>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JTextField" name="t_tafelcode">
+    </Component>
+    <Component class="javax.swing.JLabel" name="l_tafel">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Tafel:"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
